# sorting-and-searching-algorithms-lab

./: .gitignore  CMakeLists.txt  README.md  include.h  main.cpp
Bogosort/: bogosort.cpp  bogosort.h
Bubble Sort/: bubble_sort.cpp  bubble_sort.h
Bucket Sort/: bucket_sort.cpp
Comparator/: comparator.cpp  comparator.h
Insertion Sort/: insertion_sort.cpp  insertion_sort.h
Merge Sort/: merge_sort.cpp  merge_sort.h
Quick Sort/: quick_sort.cpp  quick_sort.h
Searching/Binary Search/: binary_search.cpp  binary_search.h
Searching/Interpolation Search/: interpolation_search.cpp  interpolation_search.h
Searching/Linear Search/: linear_search.cpp  linear_search.h
Selection Sort/: selection_sort.cpp  selection_sort.h
Sorting/Bogosort/: bogosort.cpp
Sorting/Bucket Sort/: bucket_sort.cpp  bucket_sort.h
Sorting/Merge Sort/: merge_sort.cpp
Sorting/Quick Sort/: quick_sort.cpp
Sorting/Selection Sort/: selection_sort.h
Standard Tools/: std_tools.cpp  std_tools.h
